force-app/main/default/objects/BGR_Lead_time_schedule__c/BGR_Lead_time_schedule__c.object-meta.xml
<CustomObject>
    <label>BGR LeadTime Adder</label>
    <nameField>
        <label>BGR Lead time schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR Lead time schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>