force-app/main/default/objects/BGR_Lead_time_schedule__c/fields/MATLSOURCE__c.field-meta.xml
<CustomField>
    <fullName>MATLSOURCE__c</fullName>
    <label>MATLSOURCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>