force-app/main/default/objects/BGR_Lead_time_schedule__c/fields/SHLTSTMETHBDY__c.field-meta.xml
<CustomField>
    <fullName>SHLTSTMETHBDY__c</fullName>
    <label>SHLTSTMETHBDY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>