force-app/main/default/objects/BGR_Lead_time_schedule__c/fields/XRAY__c.field-meta.xml
<CustomField>
    <fullName>XRAY__c</fullName>
    <label>XRAY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>