force-app/main/default/objects/BGR_Lead_time_schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>XRAY__c</columns>
    <columns>PMI__c</columns>
    <columns>SHLTSTMETHACT__c</columns>
    <columns>SHLTSTMETHBDY__c</columns>
    <columns>ASSYLOCATION__c</columns>
    <columns>MATLSOURCE__c</columns>
    <columns>Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>